# web-crawler

./: .gitignore  GEMINI.md  README.md  api-requests.js  index.html  main.py  pyproject.toml
url_extractor/: crawler.py  extractor.py  http.py
